fix: update translations for various languages

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1442,7 +1442,7 @@
     "series": "Series",
     "server": "Servidor",
     "server-accepts-filesize": "Maximální velikost nahrání souborů",
-    "server-software": "Software del servidor",
+    "server-software": "Software serveru",
     "service": "Servicio",
     "services": "Servicios",
     "settings": "Ajustes",
