--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -582,7 +582,7 @@
     "es-tax-exception-e4": "Spanien: Ausnahme nach Artikel 23 und 24 des Umsatzsteuergesetzes",
     "es-tax-exception-e5": "Spanien: Ausnahme nach Artikel 25 des Umsatzsteuergesetzes",
     "es-tax-exception-e6": "Spanien: Steuerausnahme aus einem anderen Grund",
-    "es-tax-exception-location-rules": "es-tax-exception-location-rules",
+    "es-tax-exception-location-rules": "Steuerausnahme-Ortregeln",
     "es-tax-exception-passive-subject": "es-tax-exception-passive-subject",
     "es-tax-regime-agrarian": "Besonderes Regime der Landwirtschaft, Viehzucht und Fischerei",
     "es-tax-regime-cash-criteria": "K",
@@ -1678,7 +1678,7 @@
     "unlock-entry": "Eintrag entsperren",
     "unpaid": "Unbezahlt",
     "unsafe-file": "Archivo no seguro",
-    "unsafe-file-p": "Por motivos de seguridad impedimos las descargas de algunos tipos de archivos, como este: %file%",
+    "unsafe-file-p": "Aus Sicherheitsgründen verhindern wir das Herunterladen bestimmter Dateitypen, wie diese: %file%",
     "until-accounting-entry": "Bis Buchung",
     "until-date": "bis-Datum",
     "until-subaccount": "Bis Unterkonto",
