--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -927,7 +927,7 @@
     "list": "Zerrenda",
     "load-def-acc-plan": "Kargatu kotabilitate plan lehenetsia",
     "loading-controller": "'%controllerName%' kontrolatzailea kargatzen",
-    "local-business-rental": "Alquiler locales",
+    "local-business-rental": "Lokalak alokatu",
     "location": "Kokapena",
     "lock-accounting": "Kontabilitatea blokeatu",
     "lock-entry": "Idazpena blokeatu",
@@ -1776,7 +1776,7 @@
     "years": "Urteak",
     "yes": "Bai",
     "yesterday": "Atzo",
-    "you-can-sort-images": "Puedes ordenar las imágenes arrastrándolas",
+    "you-can-sort-images": "Irudiak arrastatuz ordenatu ditzakezu",
     "you-cant-delete-primary-variant": "Ezin duzu produktuaren aldaera nagusia kendu",
     "you-sent-a-audio": "Audio bat bidali duzu",
     "you-sent-a-document": "Dokumentu bat bidali duzu",
