--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -582,7 +582,7 @@
     "es-tax-exception-e4": "España: excepción polo artigo 23 e 24 da Ley do IVE",
     "es-tax-exception-e5": "España: excepción polo artigo 25 da Ley do IVE",
     "es-tax-exception-e6": "España: excepción por outra causa",
-    "es-tax-exception-location-rules": "es-tax-exception-location-rules",
+    "es-tax-exception-location-rules": "excepción fiscal regras de localización",
     "es-tax-exception-passive-subject": "excepción fiscal suxeito pasivo",
     "es-tax-regime-agrarian": "Rexime especial da agricultura, gandería e pesca",
     "es-tax-regime-cash-criteria": "Criterio de caixa",
@@ -998,7 +998,7 @@
     "meta-description": "FacturaScripts é un software de facturación e contabilidade para pemes. É software libre baixo licencia GNU\/LGPL.",
     "method-payment": "Método de pagamento",
     "mime-type": "Mime Type",
-    "min-fs-version": "Versión min. Core",
+    "min-fs-version": "Versión mín. Core",
     "min-php-version": "Min. v. PHP",
     "minimum-amount-with-cifnif": "Mínimo importe con CIF\/NIF",
     "minimum-amount-without-cifnif": "Mínimo importe sen CIF\/NIF",
@@ -1114,7 +1114,7 @@
     "only-closed": "Só pechados",
     "only-insert": "Só engadir",
     "only-owner-data": "Amosar soamente rexistros do usuario",
-    "only-owner-data-p": "El usuario solamente podrá ver registros que haya creado él o que tenga asignados (como usuario o agente)",
+    "only-owner-data-p": "Marcando a opción de amosar só rexistros do usuario, só poderá ver rexistros que el creou ou que tenga asignados (como usuario ou axente)",
     "only-pending": "Só pendentes",
     "only-suspended": "soamente suspendidos",
     "open": "Abrir",
