--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1762,7 +1762,7 @@
     "wizard": "Assistente",
     "wizard-p": "Compila questo modulo sul tuo business per completare la configurazione.",
     "wizard-plugins": "Un plugin è un componente che aggiunge nuove funzionalità. Seleziona i plugin che desideri attivare immediatamente, o fallo più tardi dal pannello di controllo.",
-    "work-certification": "Certificación",
+    "work-certification": "Certificazione",
     "work-events": "Eventi di lavoro",
     "working-hours": "Ore lavorative",
     "works": "Lavori",
