--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1441,7 +1441,7 @@
     "serierb": "Seria RB",
     "series": "Serie",
     "server": "Serwer",
-    "server-accepts-filesize": "Tamaño máx. subida archivos",
+    "server-accepts-filesize": "Maksymalny rozmiar przesyłania plików",
     "server-software": "Oprogramowanie serwera",
     "service": "Usługa",
     "services": "Usługi",
