--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -394,7 +394,7 @@
     "database": "Base de dados",
     "database-error": "Erro ao conectar à base de dados",
     "database-error-pc": "🖥️ Si el programa está instalado en tu PC, probablemente se te haya olvidado activar MySQL o tenga problemas para activarse.",
-    "database-error-server": "🌎 se o programa estiver instalado em um servidor ou hospedagem, você provavelmente alterou o usuário ou a senha do banco de dados, ou atingiu algum limite de uso do hospedagem.",
+    "database-error-server": "🌎 se o programa estiver instalado em um servidor ou hospedagem, você provavelmente alterou o usuário ou a senha do banco de dados, ou atingiu algum limite de uso da hospedagem.",
     "database-name-must-be-lowercase": "O nome da base de dados deve estar em minúsculas",
     "date": "Data",
     "date-in": "Data de entrada",
@@ -671,7 +671,7 @@
     "fixed-value": "Valor fixo",
     "flag": "Bandeira",
     "folder-not-writable": "Não é possível escrever na pasta FacturaScripts.",
-    "folders-not-writable": "No se puede escribir sobre la carpeta de FacturaScripts: %folders%",
+    "folders-not-writable": "Não é possível escrever nas pastas do FacturaScripts: %folders%",
     "font": "Fonte",
     "font-size": "Tamanho de fonte",
     "footer": "Rodapé",
@@ -1074,7 +1074,7 @@
     "no-reference": "Sem referência",
     "no-selected-item": "Nenhum item selecionado",
     "no-stock": "Sem controle de estoque",
-    "no-updates-now": "No hay actualizaciones en este momento",
+    "no-updates-now": "Não há atualizações no momento",
     "non-editable-accounting-entry": "Asiento contábil não editável",
     "non-editable-columns": "Colunas não editáveis: %columns%",
     "non-editable-document": "Documento não editável",
