Añadido aviso para requerir concepto en el asiento en varios idiomas, mejorando la usabilidad del formulario.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -2,6 +2,7 @@
     "2fa": "2FA",
     "abbreviated": "Zkrácený",
     "about": "O",
+    "acc-concept-required": "Debes introducir primero el concepto del asiento",
     "accept": "Přijmout",
     "accept-all": "Přijmout vše",
     "accept-data": "Přijmout změny\/operaci",
@@ -1200,7 +1201,7 @@
     "phones": "Teléfonos",
     "php-extension-needed": "Ve zkonfiguraci PHP je vyžadováno rozšíření %extension%",
     "php-extension-not-found": "No tienes la extensión %extension% de PHP instalada.",
-    "php-extensions": "Extensiones PHP",
+    "php-extensions": "PHP rozšíření",
     "php-extensions-required": "Extensiones PHP requeridas",
     "php-support-end": "El soporte para PHP %current% terminará pronto. Por favor, actualiza PHP a la versión %min% o superior.",
     "php-version-too-new": "Doporučuje se používat verzi PHP mezi %min_version% a %max_version%. Aktuálně máte %version%.",
