--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -2,6 +2,7 @@
     "2fa": "2FA",
     "abbreviated": "abgekürz",
     "about": "Über",
+    "acc-concept-required": "Debes introducir primero el concepto del asiento",
     "accept": "akzeptieren",
     "accept-all": "Aceptar todo",
     "accept-data": "Akzeptieren Sie Änderungen oder Vorgänge",
