--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -2,6 +2,7 @@
     "2fa": "2FA",
     "abbreviated": "Abbreviated",
     "about": "About",
+    "acc-concept-required": "Debes introducir primero el concepto del asiento",
     "accept": "Accept",
     "accept-all": "Accept all",
     "accept-data": "Accept changes or operation",
@@ -1227,7 +1228,7 @@
     "plugin-update": "Update of plugin %pluginName% to version %version%",
     "plugins": "Plugins",
     "plugins-p": "Plugins allow adding new features. Add the ones you need now, or do it whenever you want from the admin menu.",
-    "plugins-required": "Plugins requeridos",
+    "plugins-required": "Required Plugins",
     "points": "Points",
     "points-of-interest": "Points of interest",
     "port": "Port",
