--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -2,6 +2,7 @@
     "2fa": "2FA",
     "abbreviated": "Laburtua",
     "about": "Honi buruz",
+    "acc-concept-required": "Debes introducir primero el concepto del asiento",
     "accept": "Onartu",
     "accept-all": "Dena onartu",
     "accept-data": "Aldaketak edo eragiketa onartu",
@@ -1632,7 +1633,7 @@
     "totaliva-value-error": "%docType% %docCode% (%docTotalTax%) BEZ totala ez da zuzena. Total zuzena: %calcTotalTax%",
     "totallinea-value-error": "Fakturaren %taxCode% zergaren lerroko BEZ totala baliogabea. Balio zuzena: %totalLine%",
     "totals": "Totala",
-    "totp-secret-key-not-set": "Erabiltzaileak %nick% ez du TOTP gako sekreturik ezarrita",
+    "totp-secret-key-not-set": "Erabiltzaileak %nick% TOTP gako sekreturik ez du ezarrita",
     "town": "Herria",
     "tracking-code": "Jarraipen kodea",
     "transfer": "Transferentzia",
