--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -2,6 +2,7 @@
     "2fa": "2FA",
     "abbreviated": "abrégé",
     "about": "Sur",
+    "acc-concept-required": "Debes introducir primero el concepto del asiento",
     "accept": "Accepter",
     "accept-all": "Acceptar tot",
     "accept-data": "Accepter les modifications ou l'opération",
@@ -592,10 +593,10 @@
     "es-tax-regime-gold": "Régime spécial de l'or d'investissement",
     "es-tax-regime-group-entities": "Régime spécial de groupe d'entités",
     "es-tax-regime-one-stop-shop-ioss": "régime fiscal de guichet unique",
-    "es-tax-regime-one-stop-shop-oss": "es-tax-regime-one-stop-shop-oss",
+    "es-tax-regime-one-stop-shop-oss": "régime fiscal du guichet unique (OSS)",
     "es-tax-regime-simplified": "Régime simplifié",
     "es-tax-regime-special-retail-traders": "régime fiscal spécial pour les détaillants",
-    "es-tax-regime-special-small-business": "régime fiscal spécialement conçu pour les petites entreprises",
+    "es-tax-regime-special-small-business": "régime fiscal spécialement prévu pour les petites entreprises",
     "es-tax-regime-surcharge": "Surtaxe d'équivalence",
     "es-tax-regime-telecom": "Régimes spéciaux applicables aux services de télécommunications, de radiodiffusion ou de télévision et aux services fournis par voie électronique",
     "es-tax-regime-travel": "Régime spécial des agences de voyage",
@@ -1114,7 +1115,7 @@
     "only-closed": "Clôturé seulement",
     "only-insert": "Ajouter seulement",
     "only-owner-data": "Montrer uniquement les enregistrements de l'utilisateur",
-    "only-owner-data-p": "El usuario solamente podrá ver registros que haya creado él o que tenga asignados (como usuario o agente)",
+    "only-owner-data-p": "En cochant l'option d'afficher uniquement les enregistrements de l'utilisateur, vous ne pourrez voir que les enregistrements qu'il a créés ou qui lui ont été attribués (en tant qu'utilisateur ou agent)",
     "only-pending": "En attente seulement",
     "only-suspended": "Suspendu seulement",
     "open": "Ouvrir",
