--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -2,6 +2,7 @@
     "2fa": "2FA",
     "abbreviated": "Abreviado",
     "about": "Acerca de",
+    "acc-concept-required": "Debes introducir primero el concepto del asiento",
     "accept": "Aceptar",
     "accept-all": "Aceptar todo",
     "accept-data": "Acepte cambios ou operación",
@@ -582,7 +583,7 @@
     "es-tax-exception-e4": "España: excepción polo artigo 23 e 24 da Ley do IVE",
     "es-tax-exception-e5": "España: excepción polo artigo 25 da Ley do IVE",
     "es-tax-exception-e6": "España: excepción por outra causa",
-    "es-tax-exception-location-rules": "excepción fiscal regras de localización",
+    "es-tax-exception-location-rules": "normas de localización de excepcións fiscais",
     "es-tax-exception-passive-subject": "excepción fiscal suxeito pasivo",
     "es-tax-regime-agrarian": "Rexime especial da agricultura, gandería e pesca",
     "es-tax-regime-cash-criteria": "Criterio de caixa",
@@ -591,11 +592,11 @@
     "es-tax-regime-general": "Réxime xeral",
     "es-tax-regime-gold": "Rexime especial do ouro de inversión",
     "es-tax-regime-group-entities": "Rexime especial do grupo de entidades",
-    "es-tax-regime-one-stop-shop-ioss": "es-tax-regime-one-stop-shop-ioss",
+    "es-tax-regime-one-stop-shop-ioss": "réxime fiscal de ventanilla única IOS",
     "es-tax-regime-one-stop-shop-oss": "es-tax-regime-one-stop-shop-oss",
     "es-tax-regime-simplified": "Réxime simplificado",
     "es-tax-regime-special-retail-traders": "es-tax-regime-special-retail-traders",
-    "es-tax-regime-special-small-business": "es-tax-regime-special-small-business",
+    "es-tax-regime-special-small-business": "réxime fiscal especial para pequenas empresas",
     "es-tax-regime-surcharge": "Recargo de equivalencia",
     "es-tax-regime-telecom": "Rexímenes especiais aplicables aos servicios de telecomunicacións, de radiodifusión ou de televisión e aos prestados por vía electrónica",
     "es-tax-regime-travel": "Rexime especial das axencias de viaxes",
@@ -1532,7 +1533,7 @@
     "subtotal": "Subtotal",
     "subtract": "Restar",
     "success": "Éxito",
-    "successive-tract": "successive-tract",
+    "successive-tract": "tracto sucesivo",
     "sum": "Suma",
     "sum-netos-line-tax-must-be": "A suma dos netos das liñas de IVE debe ser: %lineNet%",
     "sum-total-line-tax-must-be": "A suma dos totais de IVE das liñas de IVE debe ser: %lineTotalTax%",
@@ -1691,7 +1692,7 @@
     "updater": "Actualizador",
     "updates-available": "Actualizacións dispoñibles",
     "updates-available-p": "Hai actualizacións dispoñibles de FacturaScripts. Por favor, fai clic no actualizador e descarga a nova versión. As actualizacións corrixen fallos e engaden novas funcionalidades.",
-    "updates-beta-warning": "Actualizaciones beta activadas",
+    "updates-beta-warning": "Actualizacións beta activadas",
     "updates-beta-warning-p": "⚠️ Ten activadas as actualizacións beta. Estas actualizacións non foron probadas e só se recomiendan en instalacións de proba.",
     "updating-attached-relations": "Actualizando contadores de arquivos adxuntos",
     "upload-file": "Subir ficheiro",
