--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -2,6 +2,7 @@
     "2fa": "2FA",
     "abbreviated": "abbreviazione",
     "about": "Di",
+    "acc-concept-required": "Debes introducir primero el concepto del asiento",
     "accept": "accettare",
     "accept-all": "Tutto accettato",
     "accept-data": "Accetta modifiche o operazioni",
@@ -92,7 +93,7 @@
     "allow-sale-without-stock-n": "consentire-vendita-senza-stock-n",
     "allow-update": "Consenti aggiornamento",
     "already-installed": "Già installato",
-    "already-installed-p": "El programa ya está instalado",
+    "already-installed-p": "Il programma è già installato",
     "always-to-company-email": "Sempre alla mail aziendale",
     "amount": "Quantità",
     "amount-without-discount": "Importo senza sconto",
@@ -927,7 +928,7 @@
     "list": "Lista",
     "load-def-acc-plan": "carica-piano-conti-predefinito",
     "loading-controller": "Controller di caricamento: '0'",
-    "local-business-rental": "Alquiler locales",
+    "local-business-rental": "Affitto locali",
     "location": "Posizione",
     "lock-accounting": "Blocca contabilità",
     "lock-entry": "Blocca voce",
@@ -1532,7 +1533,7 @@
     "subtotal": "Subtotale",
     "subtract": "Sottrarre",
     "success": "successo",
-    "successive-tract": "successive-tract",
+    "successive-tract": "tratto successivo",
     "sum": "Somma",
     "sum-netos-line-tax-must-be": "La somma della rete delle linee IVA dovrebbe essere: 0",
     "sum-total-line-tax-must-be": "La somma dei totali IVA delle righe IVA dovrebbe essere: 0",
