--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -2,6 +2,7 @@
     "2fa": "2FA",
     "abbreviated": "Skrócony",
     "about": "O nas",
+    "acc-concept-required": "Debes introducir primero el concepto del asiento",
     "accept": "Zaakceptować",
     "accept-all": "Akceptuj wszystko",
     "accept-data": "Akceptować zmiany lub operację",
@@ -1200,7 +1201,7 @@
     "phones": "Telefony",
     "php-extension-needed": "Se requiere la extensión %extension% en la configuración de PHP",
     "php-extension-not-found": "Nie masz zainstalowanego rozszerzenia %extension% PHP.",
-    "php-extensions": "Extensiones PHP",
+    "php-extensions": "Rozszerzenia PHP",
     "php-extensions-required": "Extensiones PHP requeridas",
     "php-support-end": "Wsparcie dla PHP %current% wkrótce się kończy. Proszę zaktualizować PHP do wersji %min% lub wyższej.",
     "php-version-too-new": "Zaleca się użycie wersji PHP pomiędzy %min_version% a %max_version%. Obecnie masz %version%",
@@ -1647,7 +1648,7 @@
     "two-factor-auth": "Uwierzytelnianie dwuskładnikowe",
     "two-factor-auth-disable": "Dezaktywuj uwierzytelnianie dwuetapowe",
     "two-factor-auth-disabled": "Dwustopniowa weryfikacja została wyłączona",
-    "two-factor-auth-enable": "Activar autenticación en 2 pasos",
+    "two-factor-auth-enable": "Włącz uwierzytelnianie dwuetapowe",
     "two-factor-auth-enabled": "Autoryzacja dwuetapowa włączona",
     "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
     "two-factor-code": "Kod dwóch czynników",
