--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -2,6 +2,7 @@
     "2fa": "2FA",
     "abbreviated": "Abreviado",
     "about": "Acerca",
+    "acc-concept-required": "Debes introducir primero el concepto del asiento",
     "accept": "Aceitar",
     "accept-all": "Aceptar todo",
     "accept-data": "Aceitar mudanças ou operação",
@@ -393,7 +394,7 @@
     "data-source": "Dados de origem",
     "database": "Base de dados",
     "database-error": "Erro ao conectar à base de dados",
-    "database-error-pc": "🖥️ Si el programa está instalado en tu PC, probablemente se te haya olvidado activar MySQL o tenga problemas para activarse.",
+    "database-error-pc": "🖥️ Se o programa estiver instalado no seu PC, pode ter-se esquecido de ativar o MySQL ou ter problemas para ativá-lo.",
     "database-error-server": "🌎 se o programa estiver instalado em um servidor ou hospedagem, você provavelmente alterou o usuário ou a senha do banco de dados, ou atingiu algum limite de uso da hospedagem.",
     "database-name-must-be-lowercase": "O nome da base de dados deve estar em minúsculas",
     "date": "Data",
@@ -575,7 +576,7 @@
     "errors": "Erros",
     "es_EC": "Espanhol (Equador)",
     "es-tax-exception-art-14": "es-tax-exception-art-14",
-    "es-tax-exception-art-7": "es-tax-exception-art-7",
+    "es-tax-exception-art-7": "exceção de imposto - sujeito passivo",
     "es-tax-exception-e1": "E",
     "es-tax-exception-e2": "Espanha: exceção pelo artigo 21 da Lei do IVA",
     "es-tax-exception-e3": "Espanha: exceção pelo artigo 22 da Lei do IVA",
