--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -2,6 +2,7 @@
     "2fa": "2FA",
     "abbreviated": "Abreviado",
     "about": "Sobre",
+    "acc-concept-required": "Debes introducir primero el concepto del asiento",
     "accept": "Aceitar",
     "accept-all": "Aceitar tudo",
     "accept-data": "Aceitar mudanças ou operação",
@@ -393,7 +394,7 @@
     "data-source": "Dados de origem",
     "database": "Base de dados",
     "database-error": "Erro ao conectar à base de dados",
-    "database-error-pc": "🖥️ Si el programa está instalado en tu PC, probablemente se te haya olvidado activar MySQL o tenga problemas para activarse.",
+    "database-error-pc": "🖥️ Se o programa estiver instalado no seu PC, pode ter-se esquecido de ativar o MySQL ou ter problemas para ativá-lo.",
     "database-error-server": "🌎 se o programa está instalado em um servidor ou hosting, provavelmente você mudou o usuário ou senha do banco de dados, ou atingiu algum limite de uso do hosting.",
     "database-name-must-be-lowercase": "O nome da base de dados deve estar em minúsculas",
     "date": "Data",
@@ -1201,7 +1202,7 @@
     "php-extension-needed": "É necessária a extensão %extension% na configuração do PHP",
     "php-extension-not-found": "Você não tem a extensão %extension% do PHP instalada.",
     "php-extensions": "Extensiones PHP",
-    "php-extensions-required": "Extensiones PHP requeridas",
+    "php-extensions-required": "Extensões PHP requeridas",
     "php-support-end": "p",
     "php-version-too-new": "Recomenda-se usar uma versão do PHP entre %min_version% e %max_version%. Atualmente, tem a %version%",
     "physical-stock": "Estoque físico",
