--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -2,6 +2,7 @@
     "2fa": "2FA",
     "abbreviated": "Abreujat",
     "about": "Sobre",
+    "acc-concept-required": "Debes introducir primero el concepto del asiento",
     "accept": "Acceptar",
     "accept-all": "Aceptar tot",
     "accept-data": "Acceptar els canvis o l'operació",
@@ -821,7 +822,7 @@
     "invalid-number": "invalid-number",
     "invalid-request": "Petició no vàlida",
     "invalid-token": "Token no válido",
-    "invalid-token-p": "El token de acceso para el archivo %file% no es válido o ha caducado",
+    "invalid-token-p": "El token d'accés per al fitxer %file% no és vàlid o ha caducat",
     "invalid-user-can-permission": "Permís no vàlid: %permission%. Els permisos disponibles són access, delete, export, import, update i only-owner-data.",
     "invalid-web": "Adreça web no vàlida",
     "invoice": "Factura",
