--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -2,6 +2,7 @@
     "2fa": "2FA",
     "abbreviated": "Abreujat",
     "about": "Sobre",
+    "acc-concept-required": "Debes introducir primero el concepto del asiento",
     "accept": "Acceptar",
     "accept-all": "Acceptar-ho tot",
     "accept-data": "Acceptar canvis o operació",
