--- a/Core/Translation/es_PA.json
+++ b/Core/Translation/es_PA.json
@@ -2,6 +2,7 @@
     "2fa": "2FA",
     "abbreviated": "Abreviado",
     "about": "Acerca de",
+    "acc-concept-required": "Debes introducir primero el concepto del asiento",
     "accept": "Aceptar",
     "accept-all": "Aceptar todo",
     "accept-data": "Aceptar cambios u operación",
